--- a/defaults.ini
+++ b/defaults.ini
@@ -66,3 +66,11 @@ start_method = 'spawn'
 
 # Whether to save the model checkpoints to Weights & Biases
 save_wandb = 'none'
+
+# Accel type
+
+acc = "gpu"
+
+# Connection string
+
+initial_peers = "0"
